[workspace]
members = [
    "client-hello-config-resolution",
    "hyper-server-client", 
    "key-logging", 
    "kms-tls-psk",
    "kms-tls-psk/fuzz",
    "tokio-server-client",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["AWS s2n"]
publish = false
license = "Apache-2.0"
edition = "2021"
