[project]
name = "integrationv2"
version = "0.0.1"
description = "Integration tests for s2n-tls"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pytest>=8.3.4",
    "pytest-rerunfailures>=15.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.7",
    "sslyze>=6.1.0",
    "pytest-timeout>=2.3.1",
]

# setuptools made a breaking change in setup file validation: https://github.com/pypa/setuptools/blob/main/NEWS.rst#deprecations-and-removals
# This is affecting tls_parser, a dependency of sslyze: https://github.com/nabla-c0d3/tls_parser/pull/11
# We use `exclude-newer` to temporarily workaround this issue, as suggested by
# uv: https://github.com/astral-sh/uv/issues/12440
[tool.uv]
exclude-newer = "2025-03-24T00:00:00Z"
