[project]
name = "integrationv2"
version = "0.0.1"
description = "Integration tests for s2n-tls"
readme = "README.md"
requires-python = ">=3.12"

# Pin rerunfailures until this issue is addressed
# https://github.com/pytest-dev/pytest-rerunfailures/issues/302
dependencies = [
    "pytest>=8.3.4",
    "pytest-rerunfailures==15.1",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.7",
    "sslyze>=6.1.0",
]

[tool.ruff.lint]
ignore = [
    "BLE001",  # blind exception catch is intentional in test fixtures
    "S110",    # try-except-pass is intentional in test fixtures
    "SIM102",  # nested ifs are often clearer with comments between conditions
    "TRY002",  # custom exceptions are overkill for test utilities
]
