[package]
name = "pcap"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
# tshark >= 3.7.0 is required for JA3 support
# JA3 support was added to earlier versions, but did not correctly ignore grease values.
# See https://github.com/wireshark/wireshark/commit/03afef0a566ed649ead587fb4c02fc2d8539f3b7
ja3 = []
# tshark >= 4.2.0 is required for JA4 support
# See https://gitlab.com/wireshark/wireshark/-/issues/19370
ja4 = []
download = [] # Download additional pcaps from a list of configured urls

[build-dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
hex = "0.4.3"
reqwest = { version = "0.12.7", features = ["blocking"] }
semver = "1.0.23"

[dependencies]
anyhow = "1.0.86"
hex = "0.4.3"
rtshark = "2.7.1"

[dev-dependencies]
# We want to test against the latest, local version of s2n
s2n-tls-sys = { path = "../../bindings/rust/s2n-tls-sys" }
s2n-tls = { path = "../../bindings/rust/s2n-tls", features = ["unstable-fingerprint"] }
