[package]
name = "pcap"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
download = [] # Download additional pcaps from a list of configured urls

[build-dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
hex = "0.4.3"
reqwest = { version = "0.13.1", features = ["blocking"] }
semver = "1.0.23"
rtshark = "4.2.0"

[dependencies]
anyhow = "1.0.86"
hex = "0.4.3"
rtshark = "4.2.0"

[dev-dependencies]
# We want to test against the latest, local version of s2n
s2n-tls-sys = { path = "../../bindings/rust/extended/s2n-tls-sys" }
s2n-tls = { path = "../../bindings/rust/extended/s2n-tls", features = ["unstable-fingerprint"] }
