[package]
name = "regression"
version = "0.1.0"
edition = "2021"

[dependencies]
s2n-tls = { version = "=0.3", path = "../../bindings/rust/extended/s2n-tls", features = ["unstable-testing"] }
s2n-tls-sys = { version = "=0.3", path = "../../bindings/rust/extended/s2n-tls-sys" }
bytes = { version = "1", optional = true }
errno = { version = "0.3" }
libc = "0.2"
crabgrind = "0.2"
futures-test = "0.3.30"
glob = "0.3.1"

[profile.release]
debug = true
