[package]
name = "junit-snapshot"
version = "0.1.0"
edition = "2021"
description = "A snapshot testing utility for JUnit XML files"
authors = ["s2n-tls Team"]

[dependencies]
quick-xml = { version = "0.30", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive"] }
colored = "2.0.4"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.8"
