[package]
name = "hyper-server-client"
version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
s2n-tls = { path = "../../rust/extended/s2n-tls" }
s2n-tls-tokio = { path = "../../rust/extended/s2n-tls-tokio" }
s2n-tls-hyper = { path = "../../rust/standard/s2n-tls-hyper" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1" }
hyper-util = { version = "0.1", features = ["client-legacy", "server", "tokio", "http1", "http2"]}
http-body-util = { version = "0.1" }
clap = { version = "4", features = ["derive"]}
http = { version = "1" }
bytes = { version = "1" }
