[package]
name = "tokio-server-client"
version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
s2n-tls-tokio = { path = "../../rust/s2n-tls-tokio" }
s2n-tls = { path = "../../rust/s2n-tls" }
tokio = { version = "1", features = ["full"] }
